src/main/resources/public/css/custom.css
/*********************************************************************/
/* GENERAL */
/*********************************************************************/
/* Content */
/*************/
#srd td {
    border-collapse: collapse;
    border: 2px solid rgb(200, 200, 200);
    letter-spacing: 1px;
    font-family: sans-serif;
    font-size: .8rem;
    padding: 5px;
    text-align: center;
}

.slidecontainer {
    width: 100%;
}

.slider {
    -webkit-appearance: none;
    width: 100%;
    height: 15px;
    border-radius: 5px;
    background: #d3d3d3;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
}

.slider:hover {
    opacity: 1;
}

.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #31BAB0;
    cursor: pointer;
}

.slider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #31BAB0;
    cursor: pointer;
}

.full-height{
    height: calc(100vh - 60px);
}

.ceo-map-toggle{
    position:fixed;
    height: calc(100vh - 60px);
}

.absolute-center{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    overflow: auto;
}
.v-center{
    display: flex;
    align-items: center;
}
.no-container-margin{
    margin-left:-15px;
    margin-right:-15px;
}
.overflow-hidden {
    overflow: hidden;
}
.disabled-group {
    opacity: 0.4;
    pointer-events: none;
}

/* Fonts */
/*************/
@font-face {
font-family: 'CaviarDreams';
src: url('../fonts/CaviarDreams.eot');
src: local('☺'),
url('../fonts/CaviarDreams.woff') format('woff'),
url('../fonts/CaviarDreams.ttf') format('truetype'),
url('../fonts/CaviarDreams.svg') format('svg');
}
@font-face {
font-family: 'CaviarDreams_Bold';
src: url('../fonts/CaviarDreams_Bold.eot');
src: local('☺'),
url('../fonts/CaviarDreams_Bold.woff') format('woff'),
url('../fonts/CaviarDreams_Bold.ttf') format('truetype'),
url('../fonts/CaviarDreams_Bold.svg') format('svg');
}
/* Typography */
/*************/

h1, h2{
    font-family:'CaviarDreams';
    color:#707070;
    text-align:center;
}
h1 {font-size: 2rem;}
h2 {font-size: 1.5rem;}
h3 {font-size: 1rem;}
h4 {font-size: 0.5rem;}

/* Colors */
/*****************/
/* Lightgreen           #31BAB0 */
/* Lightgreen:hover     #279B93 */
/* Darkgreen            #0C4D48 */
/* Darkgreen:hover      #0b302c */
/* Yellow               #FCCF07 */
/* Yellow:hover         #ecbc0d */
/* Lightgray            #ECEEEF */
/* Lightgray:hover      #dadcdf */
/* Darkgray             #0C4D48 */
/* Darkgray:hover       #0b302c */


.bg-darkgreen{
    background-color:#0C4D48!important;
    color:white;
}
.bg-darkgreen h1,h2{
    padding:1rem;
    color:white;
    margin:0;
}

.bg-lightgreen{
    background-color:#31BAB0!important;
    color:white;
    -webkit-transition: background-color 100ms linear;
    -ms-transition: background-color 100ms linear;
    transition: background-color 100ms linear;
}
.bg-lightgreen:hover{
    background-color:#279B93!important;
    color:white;
}
.bg-lightgray{
    background-color:#ECEEEF!important;
    -webkit-transition: background-color 100ms linear;
    -ms-transition: background-color 100ms linear;
    transition: background-color 100ms linear;
}
.bg-lightgray:hover{
    background-color:#dadcdf!important;

}
.bg-yellow{
    background-color:#FCCF07!important;
    color:#279B93;
    -webkit-transition: background-color 100ms linear;
    -ms-transition: background-color 100ms linear;
    transition: background-color 100ms linear;
}
.bg-yellow a:hover{
    background-color:#ecbc0d!important;
    color:#279B93;
}
/* Buttons */
/*****************/

.btn {
    border-width: 1.5px;
    font-weight: bold;
}

.btn-outline-lightgreen{
    color: #31BAB0;
    background-color: transparent;
    background-image: none;
    border-color: #31BAB0;
}
.btn-outline-lightgreen:hover{
    color: #ffff;
    background-color: #31BAB0;
    border-color: #31BAB0;
}
.btn-outline-lightgray{
    color: black;
    background-color: transparent;
    background-image: none;
    border-color: #ECEEEF;
}
.btn-outline-lightgray:hover{
    background-color: #dadcdf;
    border-color: #dadcdf;
}
.btn-outline-darkgray{
    color: #5e5f60;
    background-color: transparent;
    background-image: none;
    border-color: #5e5f60;
}
.btn-outline-darkgray:hover{
    color: #ffff;
    background-color: #3a3b3c;
    border-color: #3a3b3c;
}
.btn-outline-yellow{
    color: #f1c00f;
    background-color: transparent;
    background-image: none;
    border-color: #FCCF07;
}
.btn-outline-yellow:hover{
    color: black;
    background-color: #FCCF07;
    border-color: #FCCF07;
}
.btn-file {
    position: relative;
    overflow: hidden;
}
.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}
.btn.bg-lightgreen:hover{
    background-color: #279B93!important;
    color:white;
}
/* Links */
/*************/
a {
    color:#31BAB0;
}
a:hover{
    color:#279B93;
    text-decoration:none;
}
/* Cards */
/*************/
.card-lightgreen {
    width: 25rem;
    margin-top: 1rem;
    margin-bottom: 1rem;
    font-size: 1rem;
    border-color: #31BAB0;
}
.card-header-lightgreen {
    color: white;
    background-color: #31BAB0;
    text-align: center;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
    font-size: 1.1rem;
    font-weight: 500;
}
/* ... */

